# SEN55-ILI9486-Air-Quality-Sensor

./: .gitignore  CMakeLists.txt  DEV_Config.cpp  DEV_Config.h  Debug.h  LCD_Driver.cpp  LCD_GUI.cpp  README.md  SEN55_LCD.ino  main_pc.cpp  patch.diff  patch2.diff
.agent/explorations/: spec-updates-draft.md  test-architecture-analysis.md
.agent/learnings/: xvfb-sdl-mental-model.md
.agent/scripts/: run_gemini_parallel.sh
.agent/workflows/: opsx-invent.md
.github/workflows/: arduino.yml  emulator.yml  integration-test.yml  tests.yml  wasm.yml
.jules/: sentinel.md
build_tests_local/: CTestTestfile.cmake  debounce_performance_test  debounce_performance_test[1]_include.cmake  debounce_performance_test[1]_tests.cmake  display_integration_test  display_integration_test[1]_include.cmake  display_integration_test[1]_tests.cmake  emulator_test  emulator_test[1]_include.cmake  emulator_test[1]_tests.cmake  gui_test  gui_test[1]_include.cmake  gui_test[1]_tests.cmake  performance_test  performance_test[1]_include.cmake  performance_test[1]_tests.cmake
build_tests_local/googletest/: CTestTestfile.cmake
build_tests_local/googletest/googlemock/: CTestTestfile.cmake
build_tests_local/googletest/googletest/: CTestTestfile.cmake
openspec/: config.yaml
openspec/changes/2026-02-20-pm25-chart-implementation/: design.md  proposal.md  tasks.md
openspec/changes/add-xvfb-refactor-tests/: tasks.md
openspec/changes/add-xvfb-refactor-tests/specs/emulator-split/: spec.md
openspec/changes/add-xvfb-refactor-tests/specs/test-display-requirements/: spec.md
openspec/changes/add-xvfb-refactor-tests/specs/test-independence/: spec.md
openspec/changes/archive/2026-02-17-add-display-integration-tests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-add-display-integration-tests/specs/display-integration-test/: spec.md
openspec/changes/archive/2026-02-17-add-xvfb-refactor-tests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-add-xvfb-refactor-tests/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-02-17-split-emulator-workflows/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-split-emulator-workflows/specs/emulator-split/: spec.md
openspec/changes/archive/2026-02-18-fix-github-workflow-submodules/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-18-fix-github-workflow-submodules/specs/github-workflow-configuration/: spec.md
openspec/changes/archive/2026-02-20-add-button-visual-feedback/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-20-add-button-visual-feedback/specs/button-visual-feedback/: spec.md
openspec/changes/archive/2026-02-20-add-button-visual-feedback/specs/ui-navigation/: spec.md
openspec/changes/archive/2026-02-20-merge-ci-workflows/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-20-merge-ci-workflows/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-02-20-merge-ci-workflows/specs/unified-ci-pipeline/: spec.md
openspec/changes/archive/2026-02-21-add-pm25-trend-chart/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-add-pm25-trend-chart/specs/pm25-trend-chart/: spec.md
openspec/changes/archive/2026-02-21-add-pm25-trend-chart/specs/ui-navigation/: spec.md
openspec/changes/archive/2026-02-21-fix-debounce-test-failure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-fix-debounce-test-failure/specs/button-visual-feedback/: spec.md
openspec/changes/archive/2026-02-21-fix-display-integration-test/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-fix-display-integration-test/specs/: checkpoint-updates.md
openspec/specs/: software-architecture.md
openspec/specs/button-visual-feedback/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/display-integration-test/: spec.md
openspec/specs/emulator-split/: spec.md
openspec/specs/github-workflow-configuration/: spec.md
openspec/specs/pm25-chart/: spec.md
openspec/specs/pm25-trend-chart/: spec.md
openspec/specs/test-display-requirements/: spec.md
openspec/specs/test-independence/: spec.md
openspec/specs/ui-navigation/: spec.md
openspec/specs/unified-ci-pipeline/: spec.md
src/App/: App.cpp  App.h  EmulatorEngine.cpp  EmulatorEngine.h  Log.cpp  Log.h
src/Display/: DEV_Config.cpp  DEV_Config.h  Debug.h  LCD_Driver.cpp  LCD_Driver.h  LCD_Driver_SDL.cpp  LCD_Driver_SDL.h  LCD_GUI.cpp  LCD_GUI.h  LCD_Touch.cpp  LCD_Touch.h
src/Display/include/SDL2/: SDL.h  SDL_stub.cpp
src/Fonts/: font12.c  font16.c  font20.c  font24.c  font8.c
src/Sensor/: SensorIntf.h  SensorMock.cpp  SensorMock.h  SensorReal.cpp  SensorReal.h
tests/: AppTests.cpp  CMakeLists.txt  MockSensor.h  emulator_test.cpp  test_main.cpp  test_sensor_disconnect.cpp
tests/integration/: chart_integration_test.cpp  display_integration_test.cpp  display_integration_test.cpp.orig
tests/integration/reference_screenshots/: README.md
tests/mocks/: MockSensor.h
tests/unit/: chart_test.cpp  debounce_performance_test.cpp  emulator_test.cpp  gui_test.cpp  performance_test.cpp
